# CSE341-FunctionalProgrammingLanguages

./: Makefile  README.md
hw2/: hw2.ml
java/: .gitignore
java/hw/hw1/: FEEDBACK.md  LANGUAGE.md  README.md
java/hw/hw1/src/: Trefoil.java
java/hw/hw1/tst/: TrefoilTest.java
java/hw/hw3/: FEEDBACK.md  LANGUAGE.md  README.md
java/hw/hw3/src/trefoil2/: Binding.java  Expression.java  Interpreter.java  Trefoil2.java
java/hw/hw3/tst/: Trefoil2Test.java
ocaml/hw2/: FEEDBACK.md  README.md  dune  hw2.ml  hw2test.ml
ocaml/hw2/.opam/: config
ocaml/hw4/: FEEDBACK.md  README.md  dune  hw4.ml  hw4challenge.ml  hw4test.ml  json.ml
ocaml/hw5/: FEEDBACK.md  README.md
ocaml/hw5/src/: ast.ml  interpreter.ml  my-program.trefoil  trefoil3test.ml
ocaml/hw6/: FEEDBACK.md  README.md  dune  hw6.ml  hw6test.ml  hw6types.ml
