(library
 (name hw4)
 (libraries json json_structures)
 (modules hw4))

(library
 (name hw4challenge)
 (libraries hw4 json json_structures)
 (modules hw4challenge))

(library
 (name json_structures)
 (libraries json)
 (modules parsed_complete_bus
   parsed_medium_bus
   parsed_small_bus))

(library
 (name json)
 (modules json))

(library
 (name hw4test)
 (modules hw4test)
 (libraries hw4 hw4challenge)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(env
  (dev
    (flags (:standard -warn-error -A -w -27 -w -39 -w -33 -w -26))))